<!-- Layout for the new released songs -->
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            card_view:cardElevation="2dp"
            tools:ignore="RtlHardcoded">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="140dp"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/havana"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/havana"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/camila_cabello" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            card_view:cardElevation="2dp"
            tools:ignore="RtlHardcoded">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="140dp"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/fix_you"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/fix_you"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/coldplay" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            card_view:cardElevation="2dp"
            tools:ignore="RtlHardcoded">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="140dp"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ritual"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/ritual_ft_wrabel"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/marshmello" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            card_view:cardElevation="2dp"
            tools:ignore="RtlHardcoded">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="140dp"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/believer"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/believer"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/imagine_dragons" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:cardElevation="2dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="140dp"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/the_one"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/the_one"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/chainsmokers"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</HorizontalScrollView>