<!-- Layout for the recently played song -->
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            card_view:cardElevation="2dp"
            tools:ignore="RtlHardcoded">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="140dp"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/whatever_takes"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/whatever_it_takes"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/imagine_dragons" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            card_view:cardElevation="2dp"
            tools:ignore="RtlHardcoded">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="140dp"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/without_you"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/without_you"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/avicii" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            card_view:cardElevation="2dp"
            tools:ignore="RtlHardcoded">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="140dp"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/way_you_are"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/just_the_way_you_are"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/bruno_mars" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            card_view:cardElevation="2dp"
            tools:ignore="RtlHardcoded">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="140dp"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/silence"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/silence"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/marshmello_ft_khalid" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:cardElevation="2dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="140dp"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/fireflies"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/fireflies"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/owl_city"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</HorizontalScrollView>